test/failing/badstructname.trunnel

struct X {
  u8 y;
}
